Reverted previously inserted changes